--- a/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Base.lproj/Main.storyboard
@@ -146,7 +146,7 @@
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="98" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N8q-Nk-oID">
                                 <rect key="frame" x="0.0" y="91" width="600" height="447"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.70381759751773054" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -490,7 +490,7 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bgc-v7-reh">
-                                <rect key="frame" x="0.0" y="87" width="600" height="451"/>
+                                <rect key="frame" x="0.0" y="90" width="600" height="448"/>
                                 <color key="backgroundColor" red="1" green="0.73725490196078436" blue="0.30588235294117649" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
@@ -499,7 +499,7 @@
                             <constraint firstItem="FlV-4W-hKm" firstAttribute="top" secondItem="Bgc-v7-reh" secondAttribute="bottom" id="2Qf-je-ISc"/>
                             <constraint firstItem="oop-d1-q6X" firstAttribute="leading" secondItem="qtI-33-yVa" secondAttribute="leadingMargin" constant="-20" id="4Rr-TL-PNs"/>
                             <constraint firstItem="Bgc-v7-reh" firstAttribute="leading" secondItem="qtI-33-yVa" secondAttribute="leading" id="Bhc-f9-uWN"/>
-                            <constraint firstItem="Bgc-v7-reh" firstAttribute="top" secondItem="oop-d1-q6X" secondAttribute="bottom" id="Tjq-fi-gJj"/>
+                            <constraint firstItem="Bgc-v7-reh" firstAttribute="top" secondItem="oop-d1-q6X" secondAttribute="bottom" constant="3" id="Tjq-fi-gJj"/>
                             <constraint firstAttribute="trailing" secondItem="Bgc-v7-reh" secondAttribute="trailing" id="VkR-9z-v2o"/>
                             <constraint firstItem="FlV-4W-hKm" firstAttribute="leading" secondItem="qtI-33-yVa" secondAttribute="leadingMargin" constant="-20" id="amK-HU-vcL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="FlV-4W-hKm" secondAttribute="trailing" constant="-20" id="lNb-FL-xEO"/>
@@ -593,16 +593,16 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6jQ-9A-8fB">
-                                <rect key="frame" x="0.0" y="87" width="600" height="451"/>
+                                <rect key="frame" x="0.0" y="90" width="600" height="448"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VoE-jc-x6u" customClass="DetailDescLbl" customModule="Movies" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="20" width="560" height="411"/>
+                                        <rect key="frame" x="20" y="20" width="560" height="408"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3NM-C5-vs2">
-                                                <rect key="frame" x="20" y="0.0" width="520" height="411"/>
+                                                <rect key="frame" x="20" y="0.0" width="520" height="408"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="t3h-6L-QlQ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="520" height="137"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="520" height="136"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="likeVideo" translatesAutoresizingMaskIntoConstraints="NO" id="nM3-y2-PHW">
                                                                 <rect key="frame" x="0.0" y="25" width="70" height="87"/>
@@ -621,10 +621,10 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="iOH-vb-X8z">
-                                                        <rect key="frame" x="0.0" y="137" width="520" height="137"/>
+                                                        <rect key="frame" x="0.0" y="136" width="520" height="136"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Poster images provided by themoviedb.org" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="7dQ-Gj-hZk">
-                                                                <rect key="frame" x="0.0" y="0.0" width="520" height="59"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="520" height="58"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="BtE-4n-G7G"/>
                                                                 </constraints>
@@ -638,7 +638,7 @@
                                                                 </variation>
                                                             </label>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByTMDB_Blk_Logo_Bree" translatesAutoresizingMaskIntoConstraints="NO" id="GuI-5o-roh">
-                                                                <rect key="frame" x="0.0" y="59" width="520" height="78"/>
+                                                                <rect key="frame" x="0.0" y="58" width="520" height="78"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" secondItem="GuI-5o-roh" secondAttribute="height" multiplier="20:3" id="NvV-CD-fXF"/>
                                                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="36" id="gBN-Gp-3sd"/>
@@ -656,7 +656,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IMDb data provided by omdbapi.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="grE-Vo-8At">
-                                                        <rect key="frame" x="0.0" y="274" width="520" height="137"/>
+                                                        <rect key="frame" x="0.0" y="272" width="520" height="136"/>
                                                         <fontDescription key="fontDescription" name="Oswald-Light" family="Oswald" pointSize="14"/>
                                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
@@ -686,7 +686,7 @@
                         <constraints>
                             <constraint firstItem="6mW-Vw-m1h" firstAttribute="leading" secondItem="Dbn-YA-UZG" secondAttribute="leadingMargin" constant="-20" id="1fu-6V-jH2"/>
                             <constraint firstItem="6mW-Vw-m1h" firstAttribute="top" secondItem="Dbn-YA-UZG" secondAttribute="topMargin" id="Awf-Vs-azX"/>
-                            <constraint firstItem="6jQ-9A-8fB" firstAttribute="top" secondItem="6mW-Vw-m1h" secondAttribute="bottom" id="OYD-gj-NsF"/>
+                            <constraint firstItem="6jQ-9A-8fB" firstAttribute="top" secondItem="6mW-Vw-m1h" secondAttribute="bottom" constant="3" id="OYD-gj-NsF"/>
                             <constraint firstItem="ZhB-bL-jLI" firstAttribute="top" secondItem="Fao-x3-4hI" secondAttribute="bottom" id="RK0-gN-Dnm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Fao-x3-4hI" secondAttribute="trailing" constant="-20" id="SX7-Ak-5Wb"/>
                             <constraint firstAttribute="trailing" secondItem="6jQ-9A-8fB" secondAttribute="trailing" id="SgA-v5-0Ln"/>
